<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_recovery_title"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonBack"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_recovery_subtitle"
        android:textSize="16sp"
        android:layout_below="@id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:layout_below="@id/textViewSubtitle"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:layout_below="@id/editTextEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_button"
        android:backgroundTint="#FFFFFF"
        android:textColor="#808080"
        android:layout_below="@id/textViewError"
        android:layout_marginTop="16dp" />

</RelativeLayout>
